balance factory added
